--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   min-height: 100%;
   width: 100%;
   background-color: var(--black);
+  overflow-x: hidden;
 }
 
 main {
@@ -25,10 +26,7 @@ main {
 }
 
 header {
-  height: 100vh;
-  width: 100vw;
   position: relative;
-  width: 100%;
 }
 
 .navbar {
@@ -37,7 +35,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 0.01rem solid var(--contrast);
+  border-bottom: 0.01rem solid #ffffff14;
 }
 
 .nav-logo img {
@@ -62,7 +60,72 @@ header {
 }
 
 /* HIGHLIGHT NAVIGATION -- MOBILE */
-
 .sm-media-nav {
   display: none;
+}
+
+/* reeler */
+.cb-tagreel {
+  position: relative;
+  background-color: var(--green);
+}
+
+.cb-tagreel-items {
+  overflow: hidden;
+}
+
+.cb-tagreel-row {
+  display: flex;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  gap: 1rem;
+}
+
+.cb-tagreel-item {
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.cb-tagreel-item span {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+}
+
+.component--primary {
+  height: 100vh;
+  width: 100vw;
+  color: var(--white);
+  /* background-color: var(--black); */
+  position: relative;
+}
+
+/* .primary-wrapper{
+  width: 100%;
+  height: 100%;
+  background-color: orangered;
+} */
+
+.primary-text-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  left: 50%;
+  top: 38%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+}
+
+.primary-title{
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 1;
+}
+
+.primary-paragraph{
+  margin-top: 4rem;
 }
