Button render issue solve

--- a/css/utils.css
+++ b/css/utils.css
@@ -95,6 +95,7 @@ a {
   height: 40px;
 }
 
+/* CURSOR - Mouse Follower Coursor */
 .mf-cursor {
   mix-blend-mode: difference !important;
   color: var(--green);
