--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,10 @@ header {
 
 .primary-title {
   font-size: 5rem;
-  width: 80%;
   font-weight: 700;
   line-height: 1;
   text-align: center;
+  color: var(--white);
 }
 
 .primary-paragraph {
@@ -157,6 +157,7 @@ header {
   object-fit: cover;
 }
 
+/* BENTO GRID - EXPERIENCE SHARING */
 .bento-grid {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -164,9 +165,9 @@ header {
   gap: 0.4rem;
   width: 100%;
   margin: 0 auto;
+  padding-bottom: 7rem;
 }
 
-/* Common card styling */
 .bento-card {
   border-radius: 1rem;
   overflow: hidden;
@@ -174,7 +175,6 @@ header {
   background-color: var(--slate);
 }
 
-/* Video inside card */
 .bento-card video {
   width: 100%;
   height: 100%;
@@ -217,12 +217,12 @@ header {
   aspect-ratio: 3 / 1.5;
 }
 
-/* Inner content styling */
 .card-content {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
+  gap: 2rem;
 }
 
 .card-indexing {
@@ -234,6 +234,7 @@ header {
 .card-content h4 {
   font-size: 3rem;
   font-weight: 600;
+  line-height: 1;
 }
 
 .card-content span {
@@ -243,13 +244,62 @@ header {
   font-weight: 300;
 }
 
-@media (max-width: 768px) {
-  .bento-grid {
-    grid-template-columns: 1fr;
-  }
+.component-innovation {
+  height: 110vh;
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
+  background-color: var(--blue);
+  color: var(--white);
+}
 
-  .bento-card {
-    grid-column: auto !important;
-    aspect-ratio: 1 / 1;
-  }
+.innovation-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #1111114b;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.innovation-wrapper .i--paragraph {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  text-align: center;
+  width: 100%;
+  margin: 1.5rem 0 3rem 0;
+}
+
+.innovation-wrapper .i--span {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  text-align: center;
+  width: 100%;
+}
+
+.innovation-parallax {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.i--image-ring{
+  position: absolute;
+  top: -5rem;
+  left: -12rem;
+  height: 30rem;
+}
+
+.i--image-geometery{
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
