--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ header {
   overflow: hidden;
   background-color: var(--blue);
   color: var(--white);
+  overflow: hidden;
 }
 
 .innovation-wrapper {
@@ -285,21 +286,36 @@ header {
 .innovation-parallax {
   height: 100%;
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
-.i--image-ring{
+.i--image-ring {
   position: absolute;
   top: -5rem;
   left: -12rem;
   height: 30rem;
+  object-fit: cover;
+  object-position: center;
 }
 
-.i--image-geometery{
+.i--image-geometery {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  top: 0;
+  right: -10%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.innovation-wrapper .button {
+  margin: 3rem 0 0 0;
+}
+
+.nigga {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
 }
