--- a/css/style.css
+++ b/css/style.css
@@ -314,8 +314,113 @@ header {
   margin: 3rem 0 0 0;
 }
 
-.nigga {
-  height: 100vh;
+.component-tab-bar {
+  min-height: 100vh;
   width: 100vw;
   position: relative;
+  color: var(--white);
+  padding-top: .1px;
+}
+
+.tab-bar-wrapper {
+  height: 100%;
+  width: 90%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.featured-title {
+  margin-top: 7rem;
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1;
+  text-align: left;
+}
+
+.featured-paragraph {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  width: 54ch;
+  padding: 4rem 0 3rem 0;
+}
+
+/* ///////////////////////////////////////////////////////////////// */
+
+.projects-tab-section {
+  min-height: 90vh;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  border-top: .0001rem solid #ffffff2d;
+}
+
+.tab-nav {
+  display: flex;
+  align-items: center;
+  justify-content: baseline;
+  flex-direction: column;
+}
+
+.tab-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--contrast);
+  width: 100%;
+  padding: 0.2rem 0.5rem;
+}
+
+.tab-btn span {
+  font-size: 0.8rem;
+}
+
+.tab-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content:flex-end;
+  flex-wrap: wrap;
+  gap: 5rem;
+}
+
+.project-card {
+  width: 22rem;
+  height: 29rem;
+  background-color: var(--contrast);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-top: 1rem;
+}
+
+.project-title {
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: 600;
+}
+
+.project-details {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.project-desc {
+  font-size: 1.1rem;
+  line-height: 1.3rem;
+}
+
+.project-image{
+  width: 100%;
+  height: 14rem;
+  background-color: red;
+}
+
+.project-image img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
