--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   --green: #0da34e;
   --contrast: #9e9e9e;
   --slate: #1f1f1f;
+  --border: #ffffff2d;
 }
 
 html,
@@ -319,7 +320,7 @@ header {
   width: 100vw;
   position: relative;
   color: var(--white);
-  padding-top: .1px;
+  padding: 0.1px 0 4rem 0;
 }
 
 .tab-bar-wrapper {
@@ -344,13 +345,14 @@ header {
   padding: 4rem 0 3rem 0;
 }
 
-/* ///////////////////////////////////////////////////////////////// */
-
 .projects-tab-section {
-  min-height: 90vh;
+  min-height: 100vh;
+  position: relative;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  border-top: .0001rem solid #ffffff2d;
+  border-top: 0.0001rem solid var(--border);
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .tab-nav {
@@ -358,40 +360,47 @@ header {
   align-items: center;
   justify-content: baseline;
   flex-direction: column;
+  z-index: 10;
 }
 
 .tab-btn {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid var(--contrast);
+  border-bottom: 1px solid var(--border);
   width: 100%;
   padding: 0.2rem 0.5rem;
 }
 
 .tab-btn span {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .tab-content {
   display: flex;
   align-items: flex-start;
-  justify-content:flex-end;
   flex-wrap: wrap;
+  justify-content: flex-end;
   gap: 5rem;
 }
 
 .project-card {
   width: 22rem;
   height: 29rem;
-  background-color: var(--contrast);
   position: relative;
-  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
   padding-top: 1rem;
+  overflow: hidden;
+  transition: all 0.3s cubic-bezier(0.64, 0, 0.78, 0);
+  border-top: 0.0001rem solid transparent;
+}
+.project-card:hover {
+  border-top: 0.0001rem solid var(--border);
 }
 
 .project-title {
@@ -406,21 +415,35 @@ header {
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .project-desc {
-  font-size: 1.1rem;
+  font-size: 1rem;
   line-height: 1.3rem;
+  color: var(--contrast);
 }
 
-.project-image{
+.project-video {
   width: 100%;
   height: 14rem;
-  background-color: red;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.83, 0, 0.17, 1);
 }
 
-.project-image img{
+.project-video video {
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+
+.project-card:hover .project-video {
+  height: 16rem;
+}
+
+#endTabNavTrigger {
+  height: 20px;
+  width: 150px;
+  position: absolute;
+  bottom: 20%;
 }
