--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,10 @@ header {
   color: var(--white);
 }
 
+.primary-title-sm {
+  display: none;
+}
+
 .primary-paragraph {
   margin-top: 4rem;
   text-align: center;
@@ -475,7 +479,6 @@ header {
   width: 150px;
   position: absolute;
   bottom: 20%;
-  background-color: lime;
 }
 
 /* contact Section */
@@ -643,7 +646,7 @@ header {
 .faq-answer {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.4s ease;
+  transition: all 0.5s linear;
   padding-right: 2rem;
 }
 
@@ -662,4 +665,90 @@ header {
 
 .faq-item.active .faq-icon {
   transform: rotate(180deg);
+}
+/* footer */
+.footer {
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  color: var(--white);
+  padding-top: 0.1px;
+}
+
+.footer-inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+  max-width: 1200px;
+  margin: 7rem auto 0 auto;
+}
+
+.footer-contact {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.footer-contact h2 {
+  font-size: 4rem;
+  font-weight: 600;
+  line-height: 1;
+  margin: 0;
+}
+
+.footer-connect {
+  max-width: 400px;
+}
+
+.footer-label {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 30px 0 10px;
+  color: var(--contrast);
+}
+
+.footer-button {
+  background: none;
+  border: 0.09rem solid var(--white);
+  padding: 10px 18px;
+  border-radius: 30px;
+  font-size: 0.8rem;
+  cursor: pointer;
+}
+
+.footer-location {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.4;
+  margin-top: 5px;
+}
+
+.footer-social button {
+  background: none;
+  border: 0.09rem solid var(--white);
+  font-size: 0.8rem;
+  padding: 6px 16px;
+  border-radius: 100px;
+  margin: 6px 6px 0 0;
+  cursor: pointer;
+}
+
+.footer-columns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px;
+}
+
+.footer-columns div ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-columns li {
+  margin-bottom: 12px;
+  font-size: 0.8rem;
 }
