--- a/styles/media.css
+++ b/styles/media.css
@@ -132,6 +132,8 @@
 
   .innovation-wrapper .primary-title {
     font-size: 3.5rem;
+    line-height: 1;
+    text-align: center;
   }
 
   .innovation-wrapper .i--paragraph {
